<resources>
    <string name="app_name">GroceryStoreApp</string>

    <string name="welcome_to_stazer_now_start_with_verification">Welcome To Stazer!</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">Now start with Verification! We will Send you an one Time Password on This Mobile Number</string>
    <string name="continue_text_btn">CONTINUE</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="country_code">+91-</string>
    <string name="enter_the_otp_sent_to">Enter The OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify_btn">Verify</string>
</resources>