<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.RegisterActivity">
    <!--Toolbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_rect01">
        <TextView
            android:textAllCaps="true"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Login"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_circle01"
        android:src="@drawable/ic_key_white"
        android:layout_marginTop="60dp"
        android:padding="4dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_below="@+id/iconIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_stazer_now_start_with_verification"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="15dp"/>
        <LinearLayout
            android:background="@drawable/shape_rect02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:text="@string/country_code"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/enter_your_mobile_number"
                android:importantForAutofill="no"
                android:imeOptions="actionDone"
                android:background="@null"
                android:inputType="number"
                android:textColorHint="@color/colorGrey01"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_below="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_getOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="14dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/continue_text_btn"
            android:textSize="18sp"
            android:textColor="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>
</RelativeLayout>