<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.VerificationActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_rect01">
        <TextView
            android:textAllCaps="true"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Verification"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_circle01"
        android:src="@drawable/ic_key_white"
        android:layout_marginTop="60dp"
        android:padding="4dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_below="@+id/iconIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_stazer_now_start_with_verification"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_otp_sent_to"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="24sp"
                android:background="@drawable/shape_rect02"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:background="@drawable/shape_rect02"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_rect02"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_rect02"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:background="@drawable/shape_rect02"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:background="@drawable/shape_rect02"
                android:maxLength="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/colorGrey01"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/textResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_below="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="14dp"
            android:text="@string/verify_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="18sp"
            android:textColor="@color/colorWhite" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>
</RelativeLayout>